crates/ui/tests/snapshots/panel_snapshots__kill_dialog_empty_input.snap
---
source: crates/ui/tests/panel_snapshots.rs
expression: kill_summary(&c)
---
panel: kill
title: Stop trading
state: confirming
dialog_title: Confirm stop trading
dialog_body: This cancels every open order, sells each open position at market, and puts the agent into a halted state. Type the phrase below to confirm.
phrase_label: Type HALT BTC to confirm
typed: ""
matched: false
confirm_enabled: false
confirm_label: Confirm stop
cancel_label: Cancel
