crates/ui/tests/snapshots/panel_snapshots__latency_halted.snap
---
source: crates/ui/tests/panel_snapshots.rs
expression: latency_summary(&c)
---
panel: latency
title: Feed latency
badge: Halted
label: Halted
color: neg
value: —
help: Venue timestamp vs local clock on the last tick.
