crates/ui/tests/snapshots/panel_snapshots__latency_high.snap
---
source: crates/ui/tests/panel_snapshots.rs
expression: latency_summary(&c)
---
panel: latency
title: Feed latency
badge: High
label: High
color: neg
value: 2500 ms
help: Venue timestamp vs local clock on the last tick.
