crates/ui/tests/snapshots/panel_snapshots__latency_ok.snap
---
source: crates/ui/tests/panel_snapshots.rs
expression: latency_summary(&c)
---
panel: latency
title: Feed latency
badge: Ok
label: OK
color: pos
value: 120 ms
help: Venue timestamp vs local clock on the last tick.
