crates/ui/tests/snapshots/panel_snapshots__latency_unknown.snap
---
source: crates/ui/tests/panel_snapshots.rs
expression: latency_summary(&c)
---
panel: latency
title: Feed latency
badge: Unknown
label: —
color: fg_muted
value: —
help: Venue timestamp vs local clock on the last tick.
