crates/ui/tests/snapshots/panel_snapshots__latency_warn.snap
---
source: crates/ui/tests/panel_snapshots.rs
expression: latency_summary(&c)
---
panel: latency
title: Feed latency
badge: Warn
label: Slow
color: warn
value: 500 ms
help: Venue timestamp vs local clock on the last tick.
