crates/ui/tests/snapshots/panel_snapshots__pnl_error.snap
---
source: crates/ui/tests/panel_snapshots.rs
expression: pnl_summary(&c)
---
panel: pnl
title: P&L
state: error
copy: Ledger error while reading equity: query timeout
