crates/ui/tests/snapshots/panel_snapshots__pnl_loading.snap
---
source: crates/ui/tests/panel_snapshots.rs
expression: pnl_summary(&c)
---
panel: pnl
title: P&L
state: loading
copy: Reading equity from the ledger…
